fixed head spacing

--- a/style.css
+++ b/style.css
@@ -108,11 +108,11 @@ h1.year {
 	left: 0;
 	margin: 0 45.5%;
 	padding: 0 20px;
-	color: #CCC;
 	font-size: 7px;
 	font-family: 'Josefin Slab', Georgia, Times, serif;
 	font-weight: 100;
 	font-style: italic;
+	color: #adadad;
 }
 
 
@@ -151,7 +151,8 @@ h1.year {
 }
 /*css3 styles*/
 @media screen and (max-width: 880px){
-   #name {letter-spacing:.2em;}
+   #name .right {letter-spacing:.2em;}
+   #name .left {letter-spacing:.3em;}
 }
 @media screen and (min-width: 580px){
    #name { padding-top:10px; }
